# coc-recruiter-bot

./: .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  start_bot.sh
.github/workflows/: main.yml
coc_recruiter_bot/: constants.py  main.py  settings.py  test_data.py
coc_recruiter_bot/funcs/: send_message.py
coc_recruiter_bot/schema/: clash_user.py
