[tool.poetry]
name = "coc-recruiter-bot"
version = "0.1.0"
description = "A discord bot that crawls channel for people looking for a clan and recruits them"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
discord-py = "^2.3.2"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
pydantic = "^2.6.4"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
flake8 = "^7.0.0"
black = "^24.3.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 119
default_section = "THIRDPARTY"
known_first_party = []
known_third_party = []

[tool.flake8]
max-line-length = 119
exclude = [
  ".git",
  "__pycache__",
  "build",
  "dist",
  "venv"
]